--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,168 @@
+absl-py==1.2.0
+aiohttp==3.8.3
+aiosignal==1.2.0
+alabaster==0.7.12
+altair==4.2.0
+anyio==3.6.1
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.8
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.10.3
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.5
+cachetools==5.2.0
+certifi==2022.9.14
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+commonmark==0.9.1
+contourpy==1.0.5
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+docutils==0.17.1
+entrypoints==0.4
+executing==1.1.0
+fastjsonschema==2.16.2
+filelock==3.8.0
+Flask==2.2.2
+fonttools==4.37.4
+frozenlist==1.3.1
+fsspec==2022.8.2
+fugashi==1.2.0
+gitdb==4.0.9
+GitPython==3.1.29
+google-auth==2.11.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+grpcio==1.49.1
+gspread==5.5.0
+httplib2==0.20.4
+huggingface-hub==0.10.0
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==5.0.0
+install==1.3.5
+ipadic==1.0.0
+ipykernel==6.16.0
+ipython==8.5.0
+ipython-genutils==0.2.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.10
+jsonschema==4.16.0
+jupyter-core==4.11.1
+jupyter-server==1.19.1
+jupyter_client==7.3.5
+jupyterlab==3.4.8
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.15.2
+kiwisolver==1.4.4
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.1
+matplotlib-inline==0.1.6
+mistune==2.0.4
+multidict==6.0.2
+nbclassic==0.4.4
+nbclient==0.6.8
+nbconvert==7.1.0
+nbformat==5.6.1
+nbsphinx==0.8.9
+nest-asyncio==1.5.6
+notebook==6.4.12
+notebook-shim==0.1.0
 numpy==1.23.3
+oauthlib==3.2.1
+packaging==21.3
 pandas==1.5.0
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.31
+protobuf==3.19.6
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydeck==0.8.0b4
+pyDeprecate==0.3.2
+Pygments==2.13.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytorch-lightning==1.7.7
+pytz==2022.4
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==24.0.1
+recommonmark==0.7.1
+regex==2022.9.13
+requests==2.28.1
+requests-oauthlib==1.3.1
+rich==12.6.0
+rsa==4.9
+scikit-learn==1.1.2
+scipy==1.9.2
+seaborn==0.12.0
+semver==2.13.0
+Send2Trash==1.8.0
+six==1.16.0
 sklearn==0.0
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+soupsieve==2.3.2.post1
+Sphinx==5.2.3
+sphinx-rtd-theme==1.0.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.5.1
 streamlit==1.13.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+terminado==0.16.0
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+tokenizers==0.13.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+torch==1.12.1
+torchmetrics==0.10.0
+torchtext==0.13.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+transformers==4.23.0
+typing_extensions==4.4.0
+tzdata==2022.5
+tzlocal==4.2
+urllib3==1.26.12
+validators==0.20.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.1
+Werkzeug==2.2.2
+yarl==1.8.1
+zipp==3.10.0
